<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="20dp"
    android:elevation="4dp"
    android:background="@color/cardview_light_background"
    tools:context="p1.edu.ufcg.worlddiscovery.fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleJob"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/job_about" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignBottom="@id/titleJob"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>

        <TextView
            android:id="@+id/userJob"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp"

            android:text="@string/job_about" />

        <EditText
            android:id="@+id/et_job"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <requestFocus />
        </EditText>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleGender"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"

                android:text="@string/gender_about" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignBottom="@id/titleGender"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>

        <TextView
            android:id="@+id/userGender"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"

            android:layout_marginTop="20dp"
            android:text="@string/gender_about" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/female" />
        </RadioGroup>


        <EditText
            android:id="@+id/et_address"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleMessage"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:textSize="16sp"

                android:layout_height="wrap_content"
                android:text="@string/message_about" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignBottom="@id/titleMessage"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>

        <TextView
            android:id="@+id/userMessage"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"

            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/message_about" />

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:inputType="textMultiLine"
            android:visibility="gone" />
    </LinearLayout>

</FrameLayout>
